--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,11 @@
       body {
         margin: 0;
       }
+
+      canvas {
+        width: 100%;
+        height: 100%;
+      }
     </style>
   </head>
   <body>
@@ -33,6 +38,6 @@
     <script src="./js/classes/Particle.js"></script>
     <script src="./js/classes/Projectile.js"></script>
     <script src="./js/eventListeners.js"></script>
-    <script src="./js/index.js"></script>
+    <script src="./js/frontend.js"></script>
   </body>
 </html>
