--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
         -moz-osx-font-smoothing: grayscale;
         text-rendering: optimizeLegibility;
         margin: 0;
-        /* background: #94a3b8; */
+        background: #94a3b8;
       }
 
       input::placeholder {
@@ -14,29 +14,31 @@
       }
 
       canvas {
-        width: 100%;
-        height: 100%;
-        background-color: black;
+        width: 1024px;
+        height: 576px;
+        background-image: url('/img/webb-dark.png');
       }
     </style>
   </head>
-  <body>
-    <div
-      style="
-        position: absolute;
-        color: white;
-        padding: 8px;
-        font-family: sans-serif;
-        font-size: 14px;
-        user-select: none;
-        background: rgba(0,0,0, .7);
-      "
-    >
-      <div style="margin-bottom: 8px;">Leaderboard:</div>
-      <div id="playerLabels"></div>
-    </div>
-    <canvas></canvas>
-    <!-- username input -->
+  <body style="display: flex; align-items: center; justify-content: center;">
+    <div>
+      <div
+        style="
+          position: absolute;
+          color: white;
+          padding: 8px;
+          font-family: sans-serif;
+          font-size: 14px;
+          user-select: none;
+          background: rgba(0,0,0, .7);
+        "
+      >
+        <div style="margin-bottom: 8px;">Leaderboard:</div>
+        <div id="playerLabels"></div>
+      </div>
+  
+      <canvas></canvas>
+  
       <div
         style="
           display: flex;
@@ -84,7 +86,7 @@
           </div>
         </form>
       </div>
-      <!-- username input end -->
+    </div>
 
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.2/gsap.min.js"
